# nozzlex

./: .bumpversion.cfg  .gitignore  LICENSE  LICENSE.md  README.md  SmoothWallNozzleGeometry.py  Super_Moby_Dick_Water_Nozzle.csv  TODO.md  bisection.py  environment.yaml  functions.py  functions_2.py  functions_backup.py  functions_dem.py  functions_hem_cp.py  functions_hem_cp_mobidick.py  functions_hem_lut.py  functions_hrm.py  main.py  main_dem.py  main_hem.py  main_hem_mobidick.py  main_mobidick_dem.py  perfect_gas_props.py  post_process.py  pyproject.toml  settings.yaml
LuT/: main_LUT.py
case_study/elliot_1979/: diffrax_nozzle_hnem_mach_max.py  diffrax_nozzle_hnem_possible_impossible_solutions_classic.py  diffrax_nozzle_homogeneous_non_equilibrium.py  simulation_cases.xlsx
case_study/nakagawa/: main_nakagawa_dem.py
case_study/supermobidick/: main_smd_dem.py  settings_smd_dem.yaml  settings_smd_hem.yaml
docs/: TODO.md
examples/: demo_jax_cache.py
examples/ducts/: demo_fanno_flow.py  demo_hydrogen_pipeline.py  demo_isentropic_nozzle.py
examples/nozzles/: diffrax_nozzle_single_phase_v1.py  diffrax_nozzle_single_phase_v2.py  diffrax_nozzle_single_phase_v2_2.py  diffrax_nozzle_single_phase_v2_test.py  diffrax_nozzle_single_phase_v3.py  (+5 more)
nozzlex/: README.txt  __init__.py  graphics.py
old/: demo_fanno_flow.py  demo_hydrogen_pipeline.py  demo_isentropic_nozzle.py
output/: nakagawa_p61_T293_IDEM1.csv  nakagawa_p61_T293_IDEM2.csv
perfect_gas_prop/: perfect_gas_prop.py  perfect_gas_props_functions.py
real_gas_prop/: real_gas_prop.py
results/: settings.yaml
(+98 files in other folders)
