[tool.poetry]
name = "nozzlex"
version = "0.0.1"
description = "JAX-compatible one-dimensional code for modeling two-phase supersonic nozzles."
authors = ["Andrea Cioffi", "Roberto Agromayor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndCiof/nozzlex.git"
documentation = "https://to.be.completed.com"


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
jax = "^0.6.0"
#jaxprop = "^0.4.1"
jaxprop = { path = "../jaxprop/", develop = true }
equinox = "^0.12.0"
optimistix = "^0.0.10"
scipy = "^1.16.1"
numpy = "^2.3.0"
matplotlib = "^3.10.6"
CoolProp = "^7.0.0"
jaxlib = "^0.6.0"
diffrax = "^0.7.0"
pysolver_view = "^0.6.8"
#pysolver_view = { path = "../pysolver_view/", develop = true }
tqdm = "^4.67.1"
nurbspy ="^1.2.3"
#nurbspy = { path = "../nurbspy/", develop = true }


[tool.poetry.group.dev.dependencies]
ipython = ">=8.13,<8.17"
toml = "^0.10.2"
black = "^25.1.0"
pytest = "^8.3.5"
pyzotero = "^1.5.19"
numpydoc = "^1.7.0"
sphinx = "^7.3.7"
sphinx-tabs = "^3.4.5"
sphinx-book-theme = "^1.1.2"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-bibtex = "^2.6.2"
sphinxawesome-theme = "^5.1.5"
sphinx-design = "^0.6.0"
sphinx-togglebutton = "^0.3.2"
bump2version = "^1.0.1"
sphinx-autobuild = "^2024.10.3"
myst-parser = "^4.0.1"
sympy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Rememeber to add --tags when publishing a new version
# git push origin main --tags